--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,16 @@ node_modules
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Expo stuff
+node_modules/
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
