Fix git hooks not running on .tsx files

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "private": true,
   "lint-staged": {
-    "**/*.{js,ts}": [
+    "**/*.{js,ts,jsx,tsx}": [
       "npm run format",
       "npm run lint"
     ]
