--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-navigation": "^4.4.4",
     "@react-native-community/datetimepicker": "6.5.2",
     "expo-location": "~15.0.1",
-    "expo-camera": "~13.0.0"
+    "expo-camera": "~13.0.0",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
