--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@videojs/http-streaming": "^2.15.1",
     "expo": "~47.0.3",
+    "expo-av": "^13.0.1",
     "expo-camera": "~13.0.0",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
