Remove lint step from pre-commit hook

--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "private": true,
     "lint-staged": {
         "**/*.{js,ts,jsx,tsx}": [
-            "npm run format",
-            "npm run lint"
+            "npm run format"
         ]
     }
 }
