--- a/package.json
+++ b/package.json
@@ -14,43 +14,43 @@
     "dependencies": {
         "@expo/vector-icons": "^13.0.0",
         "@react-native-community/datetimepicker": "6.5.2",
-        "@react-navigation/bottom-tabs": "^6.4.0",
-        "@react-navigation/native": "^6.0.13",
-        "@react-navigation/native-stack": "^6.9.1",
+        "@react-navigation/bottom-tabs": "^6.4.1",
+        "@react-navigation/native": "^6.0.14",
+        "@react-navigation/native-stack": "^6.9.2",
         "@videojs/http-streaming": "^2.15.1",
-        "expo": "~47.0.3",
+        "expo": "47.0.8",
         "expo-av": "^13.0.1",
-        "expo-camera": "~13.0.0",
-        "expo-location": "~15.0.1",
-        "expo-status-bar": "~1.4.2",
+        "expo-camera": "^13.1.0",
+        "expo-location": "^15.0.1",
+        "expo-status-bar": "^1.4.2",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-native": "0.70.5",
         "react-native-dropdown-picker": "^5.4.3",
         "react-native-gesture-handler": "^2.8.0",
-        "react-native-maps": "1.3.2",
+        "react-native-maps": "^1.3.2",
         "react-native-reanimated": "~2.12.0",
         "react-native-reanimated-carousel": "^3.1.5",
         "react-native-toast-notifications": "^3.3.1",
         "react-native-video": "^5.2.1",
-        "react-native-web": "~0.18.9",
+        "react-native-web": "^0.18.10",
         "react-navigation": "^4.4.4"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@types/react": "~18.0.14",
-        "@types/react-native": "~0.70.6",
-        "@typescript-eslint/eslint-plugin": "^5.42.1",
-        "@typescript-eslint/parser": "^5.42.1",
-        "eslint": "^8.27.0",
+        "@babel/core": "^7.20.2",
+        "@types/react": "~18.0.25",
+        "@types/react-native": "~0.70.7",
+        "@typescript-eslint/eslint-plugin": "^5.44.0",
+        "@typescript-eslint/parser": "^5.44.0",
+        "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-universe": "^11.1.1",
-        "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-react": "^7.31.11",
         "husky": "^8.0.2",
-        "lint-staged": "^13.0.3",
-        "prettier": "^2.7.1",
-        "prettier-plugin-organize-imports": "^3.2.0",
-        "typescript": "^4.8.4"
+        "lint-staged": "^13.0.4",
+        "prettier": "^2.8.0",
+        "prettier-plugin-organize-imports": "^3.2.1",
+        "typescript": "^4.9.3"
     },
     "private": true,
     "lint-staged": {
