--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@react-navigation/native": "^6.0.14",
         "@react-navigation/native-stack": "^6.9.2",
         "@videojs/http-streaming": "^2.15.1",
+        "envsafe": "^2.0.3",
         "expo": "47.0.8",
         "expo-av": "^13.0.1",
         "expo-camera": "^13.1.0",
@@ -42,6 +43,7 @@
         "@types/react-native": "~0.70.7",
         "@typescript-eslint/eslint-plugin": "^5.44.0",
         "@typescript-eslint/parser": "^5.44.0",
+        "dotenv": "^16.0.3",
         "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-universe": "^11.1.1",
