--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.5",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4"
