--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-native-maps": "^1.3.2",
         "react-native-reanimated": "~2.12.0",
         "react-native-reanimated-carousel": "^3.1.5",
+        "react-native-safe-area-context": "^4.4.1",
         "react-native-toast-notifications": "^3.3.1",
         "react-native-video": "^5.2.1",
         "react-native-web": "^0.18.10",
