fix: don't use /api for media files

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 # - changes in `.env` files are only applied when restarting the expo process (`npm run start` etc.)
 # - `NODE_ENV` shouldn't be set here, but instead using the `--no-dev` cli switch
 
-BASE_URL=http://10.0.2.2:3001/api
+BASE_URL=http://10.0.2.2:3001
