--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-native": "0.70.5",
         "react-native-dropdown-picker": "^5.4.3",
         "react-native-gesture-handler": "^2.8.0",
+        "react-native-google-place-picker": "^1.2.1",
         "react-native-maps": "^1.3.2",
         "react-native-reanimated": "~2.12.0",
         "react-native-reanimated-carousel": "^3.1.5",
