--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "react-native-toast-notifications": "^3.3.1",
         "react-native-video": "^5.2.1",
         "react-native-web": "^0.18.10",
-        "react-navigation": "^4.4.4"
+        "react-navigation": "^4.4.4",
+        "zustand": "^4.1.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
