--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "expo-av": "^13.0.1",
         "expo-camera": "^13.1.0",
         "expo-location": "^15.0.1",
+        "expo-secure-store": "^12.0.0",
         "expo-status-bar": "^1.4.2",
         "react": "18.1.0",
         "react-dom": "18.1.0",
