--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-native-dropdown-picker": "^5.4.3",
         "react-native-gesture-handler": "^2.8.0",
         "react-native-google-place-picker": "^1.2.1",
+        "react-native-loading-spinner-overlay": "^3.0.1",
         "react-native-maps": "^1.3.2",
         "react-native-reanimated": "~2.12.0",
         "react-native-reanimated-carousel": "^3.1.5",
