--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-native-google-place-picker": "^1.2.1",
         "react-native-loading-spinner-overlay": "^3.0.1",
         "react-native-maps": "^1.3.2",
+        "react-native-ratings": "^8.1.0",
         "react-native-reanimated": "~2.12.0",
         "react-native-reanimated-carousel": "^3.1.5",
         "react-native-safe-area-context": "^4.4.1",
