--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "evented",
     "version": "1.0.0",
     "scripts": {
+        "prepare": "husky install",
         "start": "expo start",
         "android": "expo start --android",
         "ios": "expo start --ios",
