feat: run formatter on .json files as well

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     },
     "private": true,
     "lint-staged": {
-        "**/*.{js,ts,jsx,tsx}": [
+        "**/*.{js,ts,jsx,tsx,json}": [
             "npm run format"
         ]
     }
