--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "react-navigation": "^4.4.4",
         "recursive-diff": "^1.0.8",
         "url-join": "^5.0.0",
-        "zustand": "^4.1.5"
+        "zustand": "^4.1.5",
+        "expo-image-picker": "~14.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
