--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "expo-location": "^15.0.1",
         "expo-secure-store": "^12.0.0",
         "expo-status-bar": "^1.4.2",
+        "expo-video-player": "^2.2.0",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-native": "0.70.5",
@@ -48,7 +49,8 @@
         "react-navigation": "^4.4.4",
         "recursive-diff": "^1.0.8",
         "url-join": "^5.0.0",
-        "zustand": "^4.1.5"
+        "zustand": "^4.1.5",
+        "@react-native-community/slider": "4.2.4"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
