--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@expo/vector-icons": "^13.0.0",
         "@react-native-community/datetimepicker": "6.5.2",
+        "@react-native-community/slider": "4.2.4",
         "@react-navigation/bottom-tabs": "^6.4.1",
         "@react-navigation/elements": "^1.3.12",
         "@react-navigation/native": "^6.0.16",
@@ -49,8 +50,8 @@
         "react-navigation": "^4.4.4",
         "recursive-diff": "^1.0.8",
         "url-join": "^5.0.0",
-        "zustand": "^4.1.5",
-        "@react-native-community/slider": "4.2.4"
+        "util": "^0.12.5",
+        "zustand": "^4.1.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
