--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "expo-secure-store": "^12.0.0",
         "expo-status-bar": "^1.4.2",
         "expo-video-player": "^2.2.0",
+        "immer": "^9.0.16",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-native": "0.70.5",
