--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
         "recursive-diff": "^1.0.8",
         "url-join": "^5.0.0",
         "util": "^0.12.5",
+        "validator": "^13.7.0",
         "zustand": "^4.1.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
         "@types/react": "~18.0.25",
         "@types/react-native": "~0.70.7",
+        "@types/validator": "^13.7.10",
         "@typescript-eslint/eslint-plugin": "^5.44.0",
         "@typescript-eslint/parser": "^5.44.0",
         "dotenv": "^16.0.3",
