--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "scripts": {
         "prepare": "husky install",
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
+        "start": "expo start --dev-client",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
         "web": "expo start --web",
         "tsc": "tsc",
         "lint": "eslint .",
@@ -23,7 +23,7 @@
         "@react-navigation/stack": "^6.3.10",
         "@videojs/http-streaming": "^2.15.1",
         "envsafe": "^2.0.3",
-        "expo": "47.0.8",
+        "expo": "~47.0.12",
         "expo-av": "~13.0.2",
         "expo-camera": "^13.1.0",
         "expo-image-picker": "~14.0.2",
@@ -52,7 +52,8 @@
         "recursive-diff": "^1.0.8",
         "url-join": "^5.0.0",
         "util": "^0.12.5",
-        "zustand": "^4.1.5"
+        "zustand": "^4.1.5",
+        "expo-splash-screen": "~0.17.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
