--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "expo-image-picker": "~14.0.2",
         "expo-location": "^15.0.1",
         "expo-secure-store": "^12.0.0",
+        "expo-splash-screen": "~0.17.5",
         "expo-status-bar": "^1.4.2",
         "expo-video-player": "^2.2.0",
         "immer": "^9.0.16",
@@ -38,6 +39,7 @@
         "react-native-dropdown-picker": "^5.4.3",
         "react-native-gesture-handler": "^2.8.0",
         "react-native-maps": "^1.3.2",
+        "react-native-nodemediaclient": "^0.2.18",
         "react-native-ratings": "^8.1.0",
         "react-native-reanimated": "~2.12.0",
         "react-native-reanimated-carousel": "^3.1.5",
@@ -52,8 +54,7 @@
         "recursive-diff": "^1.0.8",
         "url-join": "^5.0.0",
         "util": "^0.12.5",
-        "zustand": "^4.1.5",
-        "expo-splash-screen": "~0.17.5"
+        "zustand": "^4.1.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
