--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react-navigation": "^4.4.4",
         "recursive-diff": "^1.0.8",
         "url-join": "^5.0.0",
+        "use-callback-ref": "^1.3.0",
         "util": "^0.12.5",
         "zustand": "^4.1.5"
     },
