--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-native-dropdown-picker": "^5.4.3",
         "react-native-gesture-handler": "^2.8.0",
         "react-native-google-place-picker": "^1.2.1",
+        "react-native-image-progress": "^1.2.0",
         "react-native-maps": "^1.3.2",
         "react-native-ratings": "^8.1.0",
         "react-native-reanimated": "~2.12.0",
