--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@expo/vector-icons": "^13.0.0",
+        "@miblanchard/react-native-slider": "^2.2.0",
         "@react-native-community/datetimepicker": "6.5.2",
         "@react-native-community/slider": "4.2.4",
         "@react-navigation/bottom-tabs": "^6.4.1",
