--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "format:check": "prettier . --check"
     },
     "dependencies": {
+        "@expo/react-native-action-sheet": "^4.0.1",
         "@expo/vector-icons": "^13.0.0",
         "@react-native-community/datetimepicker": "6.5.2",
         "@react-native-community/slider": "4.2.4",
