--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "scripts": {
         "prepare": "husky install",
         "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
+        "go:android": "expo start --android",
+        "go:web": "expo start --web",
+        "native:start": "expo start --dev-client --port 19000",
+        "native:install": "expo run:android --port 19000",
+        "apk:development": "eas build --platform android --local --profile development --output evented-dev.apk",
+        "apk:production": "eas build --platform android --local --profile production --output evented.apk",
         "tsc": "tsc",
         "lint": "eslint .",
         "format": "prettier . --write",
@@ -25,12 +28,13 @@
         "@react-navigation/stack": "^6.3.10",
         "@videojs/http-streaming": "^2.15.1",
         "envsafe": "^2.0.3",
-        "expo": "47.0.8",
+        "expo": "~47.0.12",
         "expo-av": "~13.0.2",
         "expo-camera": "^13.1.0",
         "expo-image-picker": "~14.0.2",
         "expo-location": "^15.0.1",
         "expo-secure-store": "^12.0.0",
+        "expo-splash-screen": "^0.17.5",
         "expo-status-bar": "^1.4.2",
         "expo-video-player": "^2.2.0",
         "immer": "^9.0.16",
@@ -39,13 +43,13 @@
         "react-native": "0.70.5",
         "react-native-dropdown-picker": "^5.4.3",
         "react-native-gesture-handler": "^2.8.0",
-        "react-native-google-place-picker": "^1.2.1",
         "react-native-image-progress": "^1.2.0",
         "react-native-maps": "^1.3.2",
         "react-native-ratings": "^8.1.0",
         "react-native-reanimated": "~2.12.0",
         "react-native-reanimated-carousel": "^3.1.5",
         "react-native-safe-area-context": "^4.4.1",
+        "react-native-screens": "^3.18.2",
         "react-native-tableview-simple": "^4.3.1",
         "react-native-toast-notifications": "^3.3.1",
         "react-native-video": "^5.2.1",
@@ -71,6 +75,7 @@
         "eslint-config-universe": "^11.1.1",
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "expo-dev-client": "^2.0.1",
         "husky": "^8.0.2",
         "lint-staged": "^13.0.4",
         "prettier": "^2.8.0",
