--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "expo": "~47.0.12",
         "expo-av": "~13.0.2",
         "expo-camera": "^13.1.0",
+        "expo-checkbox": "~2.2.2",
         "expo-image-picker": "~14.0.2",
         "expo-location": "^15.0.1",
+        "expo-notifications": "^0.17.0",
         "expo-secure-store": "^12.0.0",
         "expo-splash-screen": "^0.17.5",
         "expo-status-bar": "^1.4.2",
@@ -60,8 +62,7 @@
         "use-callback-ref": "^1.3.0",
         "util": "^0.12.5",
         "validator": "^13.7.0",
-        "zustand": "^4.1.5",
-        "expo-checkbox": "~2.2.2"
+        "zustand": "^4.1.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
