--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react-native-gesture-handler": "^2.8.0",
         "react-native-image-progress": "^1.2.0",
         "react-native-maps": "^1.3.2",
+        "react-native-modal-datetime-picker": "^14.0.1",
         "react-native-nodemediaclient": "^0.2.18",
         "react-native-ratings": "^8.1.0",
         "react-native-reanimated": "~2.12.0",
