--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@react-navigation/elements": "^1.3.12",
         "@react-navigation/native": "^6.0.16",
         "@react-navigation/native-stack": "^6.9.2",
+        "dayjs": "^1.11.7",
         "envsafe": "^2.0.3",
         "expo": "~47.0.12",
         "expo-av": "~13.0.2",
