--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "expo-video-player": "^2.2.0",
         "geolib": "^3.3.3",
         "immer": "^9.0.16",
+        "lodash": "^4.17.21",
         "react": "18.1.0",
         "react-dom": "18.1.0",
         "react-native": "0.70.5",
@@ -70,6 +71,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.20.2",
+        "@types/lodash": "^4.14.191",
         "@types/react": "~18.0.25",
         "@types/react-native": "~0.70.7",
         "@types/validator": "^13.7.10",
